# vdj-video-sync

./: .gitignore  README.md
.github/workflows/: build-plugin.yml  build-server.yml  codeql.yml  deploy-pages.yml  release.yml
docs/: index.html
plugin/: CMakeLists.txt
plugin/src/: Info.plist.in  VdjVideoSync.def  VideoSyncPlugin.cpp  VideoSyncPlugin.h  main.cpp  resource.h
server/: Makefile  go.mod  go.sum  main.go
server/internal/bpm/: bpm.go  cache.go
server/internal/browser/: open.go  open_darwin.go  open_unix.go  open_windows.go
server/internal/config/: config.go
server/internal/db/: db.go  migrations.go  schema.go
server/internal/handlers/: handlers.go
server/internal/models/: models.go
server/internal/overlay/: store.go
server/internal/sse/: hub.go
server/internal/transitions/: store.go
server/internal/video/: matcher.go
server/static/css/: input.css
server/static/js/: app.js  sse-worker.js
server/templates/components/: controlbar.templ  controlbar_templ.go  header.templ  header_templ.go
server/templates/layouts/: base.templ  base_templ.go
server/templates/pages/: dashboard.templ  dashboard_templ.go  library.templ  library_templ.go  overlay.templ  overlay_templ.go  player.templ  player_templ.go  transitions.templ  transitions_templ.go
